--- a/index.html
+++ b/index.html
@@ -22,6 +22,33 @@
     <title>Pankaj Bhattarai</title>
   </head>
   <body>
+    <!-- header -->
+    <header class="header">
+
+    </header>
+    <!-- =====================MAIN================================= -->
+    <main class="main">
+    <!-- home -->
+        <section class="home section" id="home">
+
+        </section>
+    <!-- about me -->
+        <section class="about section" id="about">
+
+        </section>
+    <!-- qualifications -->
+        <section class="qualifications section" id="qualifications">
+
+        </section>
+    <!-- contact me  -->
+        <section class="contact section" id="contact">
+            
+        </section>
+    </main>
+    <!-- footer -->
+    <footer class="footer">
+
+    </footer>
     <!-- JavaScript Bundle with Popper
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
