--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
       href="/css/argon-design-system.min.css"
       rel="stylesheet"
     />
+    <!-- fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
 
+    <!-- icons -->
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,32 +39,66 @@
   </head>
   <body>
     <!-- header -->
-    <header class="header">
-
+    <header class="header" id="header">
+      <nav class="nav container navbar-expand-lg">
+        <a href="#" class="nav__logo navbar-brand ml-3">Pankaj Bhattarai</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbar-default"
+          aria-controls="navbar-default"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__list grid">
+            <li class="nav__item">
+              <a href="#home" class="nav__link">
+                <i class="uil uil-home nav__icon"></i>Home
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#about" class="nav__link">
+                <i class="uil uil-user-circle nav__icon"></i>About Me
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#qualifications" class="nav__link">
+                <i class="uil uil-desktop nav__icon"></i>Qualifications
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#home" class="nav__link">
+                <i class="uil uil-envelope-heart"></i>Contact Me
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="nav__btns">
+          <!-- Theme changing options  -->
+          <i data-mode="dark" id="theme-button"class="uil uil-cloud-moon moon-change-theme"></i>
+          <div class="nav__toggle" id="nav__toggle">
+            <i class="uil uil-bars"></i>
+          </div>
+        </div>
+      </nav>
     </header>
     <!-- =====================MAIN================================= -->
     <main class="main">
-    <!-- home -->
-        <section class="home section" id="home">
-
-        </section>
-    <!-- about me -->
-        <section class="about section" id="about">
-
-        </section>
-    <!-- qualifications -->
-        <section class="qualifications section" id="qualifications">
-
-        </section>
-    <!-- contact me  -->
-        <section class="contact section" id="contact">
-            
-        </section>
+      <!-- home -->
+      <section class="home section" id="home"></section>
+      <!-- about me -->
+      <section class="about section" id="about"></section>
+      <!-- qualifications -->
+      <section class="qualifications section" id="qualifications"></section>
+      <!-- contact me  -->
+      <section class="contact section" id="contact">`</section>
     </main>
     <!-- footer -->
-    <footer class="footer">
-
-    </footer>
+    <footer class="footer"></footer>
     <!-- JavaScript Bundle with Popper
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
