worked for responsive design

--- a/index.html
+++ b/index.html
@@ -76,11 +76,12 @@
               </a>
             </li>
           </ul>
+          <i class="uil uil-times nav__close" id="nav-close"></i>
         </div>
         <div class="nav__btns">
           <!-- Theme changing options  -->
           <i data-mode="dark" id="theme-button"class="uil uil-cloud-moon moon-change-theme"></i>
-          <div class="nav__toggle" id="nav__toggle">
+          <div class="nav__toggle" id="nav-toggle">
             <i class="uil uil-bars"></i>
           </div>
         </div>
