--- a/index.html
+++ b/index.html
@@ -161,14 +161,311 @@
         </div>
       </section>
       <!-- about me -->
-      <section class="about section" id="about"></section>
+      <section class="about section" id="about">
+        <h2 class="section__title">About</h2>
+        <span class="section__subtitle">Little things about me </span>
+        <div class="about__container container grid">
+            <img src="/assets/photo.jpg" alt="main image" class="about__image">
+            <div class="about__data">
+              <p class="about__description" id="home-about">
+                I am just a learner and a student. Studying B.Tech-CSE w/s Cyber Security. I like the Internet, Space and Philosophy.
+              </p>
+            </div>
+            <div class="about__buttons">
+              <a href="/assets/CV.pdf" download="myCV" target="_blank" class="button button--flex">
+                Download CV<i class="uil uil-file-download-alt button__icon"></i>
+              </a>
+            </div>
+        </div>
+      </section>
       <!-- qualifications -->
-      <section class="qualifications section" id="qualifications"></section>
+      <section class="qualifications section" id="qualifications">
+        <h2 class="section__title">Qualifications</h2>
+        <span class="section__subtitle">
+          My Educational Journey
+        </span>
+        <div class="qualification__container container">
+          <div class="row mt-lg-0">
+            <div class="col-lg-6 col-sm-10 col-md-10 mt-2 qualification__content" id="education">
+              <div class="qualification__button button--flex">
+                  <i class="uil uil-graduation-cap qualification__icon"></i> Education
+              </div>
+
+              <div id="education_timeline">
+                  <div class="container py-2">
+
+                      <!-- Timeline item 1 -->
+                      <div class="row">
+                          <!-- Timeline design -->
+                          <div class="col-auto text-center flex-column d-sm-flex">
+                              <div class="row h-50 qualification__journey">
+                                  <div class="col">
+                                      <span class="qualification__line"></span>
+                                  </div>
+                                  <div class="col">&nbsp;</div>
+                              </div>
+
+                              <h5>
+                                  <span class="badge qualification__calendar">
+                                      <i class="uil uil-calendar-alt qualification__calendar-icon"></i>
+                                      2024
+                                  </span>
+                              </h5>
+
+                              <div class="row h-50 qualification__journey">
+                                  <div class="col">
+                                      <span class="qualification__line"></span>
+                                  </div>
+                                  <div class="col">&nbsp;</div>
+                              </div>
+                          </div>
+                          <!-- Timeline content Events -->
+                          <div class="col py-2">
+                              <div class="card education-card transparent_card mirror-face shadow2">
+                                  <div class="card-body">
+                                      <div class="task">
+                                          <div class="abstract">
+                                              <h3 class="qualification__title"> Undergraduate </h3>
+                                              <p class="qualification__subtitle">SRM Institute of Science and Technology </p>
+                                          </div>
+                                          <div class="details">
+                                              <p class="qualification__subtitle"> Bachelor's in Technology - Computer Science and Engineering with Specialization in Cyber Security </p>
+                                          </div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+
+                      <!-- Timeline item 2 -->
+                      <div class="row">
+                          <!-- Timeline design -->
+                          <div class="col-auto text-center flex-column d-sm-flex">
+                              <div class="row h-50 qualification__journey">
+                                  <div class="col">
+                                      <span class="qualification__line"></span>
+                                  </div>
+                                  <div class="col">&nbsp;</div>
+                              </div>
+
+                              <h5>
+                                  <span class="badge qualification__calendar">
+                                      <i class="uil uil-calendar-alt qualification__calendar-icon"></i>
+                                      2020
+                                  </span>
+                              </h5>
+
+                              <div class="row h-50 qualification__journey">
+                                  <div class="col">
+                                      <span class="qualification__line"></span>
+                                  </div>
+                                  <div class="col">&nbsp;</div>
+                              </div>
+                          </div>
+                          <!-- Timeline content Events -->
+                          <div class="col py-2">
+                              <div class="card education-card transparent_card mirror-face shadow2">
+                                  <div class="card-body">
+                                      <div class="task">
+                                          <div class="abstract">
+                                              <h3 class="qualification__title"> High School </h3>
+                                              <p class="qualification__subtitle"> DAVSKVBSS, Lalitpur, Nepal </p>
+                                          </div>
+                                          <div class="details">
+                                              <p class="qualification__subtitle"> Studied PCM </p>
+                                          </div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                       <div class="row">
+                          <!-- Timeline design -->
+                          <div class="col-auto text-center flex-column d-sm-flex">
+                              <div class="row h-50 qualification__journey">
+                                  <div class="col">
+                                      <span class="qualification__line"></span>
+                                  </div>
+                                  <div class="col">&nbsp;</div>
+                              </div>
+
+                              <h5>
+                                  <span class="badge qualification__calendar">
+                                      <i class="uil uil-calendar-alt qualification__calendar-icon"></i>
+                                      2018
+                                  </span>
+                              </h5>
+
+                              <div class="row h-50 qualification__journey">
+                                  <div class="col">
+                                      <span class="qualification__line"></span>
+                                  </div>
+                                  <div class="col">&nbsp;</div>
+                              </div>
+                          </div>
+                          <!-- Timeline content Events -->
+                          <div class="col py-2">
+                              <div class="card education-card transparent_card mirror-face shadow2">
+                                  <div class="card-body">
+                                      <div class="task">
+                                          <div class="abstract">
+                                              <h3 class="qualification__title"> Secondary School </h3>
+                                              <p class="qualification__subtitle"> Adarsha Janapremi ESS </p>
+                                          </div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+
+                       <!-- Timeline item end -->
+                       <div class="row">
+                          <!-- Timeline design -->
+                          <div class="col-auto text-center flex-column d-sm-flex">
+                              <div class="row h-50 qualification__journey">
+                                  <div class="col">
+                                      <span class="qualification__start">
+                                          <i class="uil uil-rocket qualification__start-icon"></i>
+                                      </span>
+                                  </div>
+                                  <div class="col">&nbsp;</div>
+                              </div>
+                          </div>
+                          <!-- Timeline content Events -->
+                          <div class="col py-2"></div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+        </div>
+      </section>
       <!-- contact me  -->
-      <section class="contact section" id="contact">`</section>
+      <section class="contact section" id="contact">
+        <h2 class="section__title">Contact Me</h2>
+        <span class="section__subtitle">
+          Get in Touch with Me 
+        </span>
+        <div class="row mt-lg-6 justify-content-center contact_mail">
+          <div class="col-lg-6 mx-lg-0 mx-2 contact__container">
+            <div class="contact__information">
+              <i class="uil uil-phone contact__icon "></i>
+              <div class="contact__title">
+                <h3>Call Me</h3>
+                <span class="contact__subtitle" id="typewriter1"></span>
+              </div>
+
+            </div>
+            <div class="contact__information">
+              <i class="uil uil-envelope-minus contact__icon"></i>
+              <div class="contact__title">
+                <h3>Email</h3>
+                <span class="contact__subtitle">pankajbhattarai50@gmail.com</span>
+              </div>
+
+            </div>
+            <div class="contact__information">
+              <i class="uil uil-map-pin contact__icon"></i>
+              <div class="contact__title">
+                <h3>Address</h3>
+                <span class="contact__subtitle" id="typewriter2"></span>
+              </div>
+
+            </div>
+          </div>
+          <div class="col-lg-6 pl-lg-4 mt-lg- 0 mt-6 contact-form" id="message-me">
+            <h2 class="contact__title">Wanna get in touch?</h2>
+            <form action="#" method="POST" class="cf">
+                <div class="row">
+                  <div class="col-lg-6">
+                    <input type="text" name="message-name" class="form-control mb-30 cf" placeholder="Name">
+                  </div>
+                  <div class="col-lg-6">
+                    <input type="email" name="message-email" class="form-control mb-30 cf" placeholder="E-mail">
+                  </div>
+                  <div class="col-12">
+                    <input type="text" name="message-subject" class="form-control mb-30 cf" placeholder="Subject">
+                  </div>
+                  <div class="col-12">
+                    <textarea name="message" class="form-control mb-30 cf" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                  </div>
+                  <div class="col-12">
+                    <button type="submit" class="button button--flex send-message form-button">
+                      Send Message<i class="uil uil-message button__icon"></i>
+                    </button>
+                  </div>
+                </div>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- footer -->
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer__bg">
+        <div class="footer__container container">
+          <div>
+            <h1 class="footer__title">
+              Pankaj Bhattarai
+            </h1>
+            <span class="footer__subtitle">
+              Computer Engineer soon
+            </span>
+
+          </div>
+          <ul class="footer__links">
+            <li>
+              <a href="#about" class="footer__link">About Me</a>
+            </li>
+            <li>
+              <a href="#contact" class="footer__link">Contact Me</a>
+            </li>
+          </ul>
+          <div class="footer__socials">
+            <a
+            href="https://www.linkedin.com/in/pankajbhattarai/"
+            target="_blank"
+            class="footer__social"
+            id="myLinkedIn"
+          >
+            <i class="uil uil-linkedin"></i>
+          </a>
+          <a
+            href="https://www.instagram.com/im.endangered/"
+            target="_blank"
+            class="footer__social"
+            id="myInstagram"
+          >
+            <i class="uil uil-instagram"></i>
+          </a>
+          <a
+            href="https://www.facebook.com/im.endangered/"
+            target="_blank"
+            class="footer__social"
+            id="myFacebook"
+          >
+            <i class="uil uil-facebook"></i>
+          </a>
+          <a
+            href="https://github.com/im-endangered/"
+            target="_blank"
+            class="footer__social"
+            id="myGithub"
+          >
+            <i class="uil uil-github"></i>
+          </a>
+          <a
+            href="https://twitter.com/pankaj69420"
+            target="_blank"
+            class="footer__social"
+            id="myTwitter"
+          >
+            <i class="uil uil-twitter"></i>
+          </a>
+          </div>
+        </div>
+        <p class="footer__copy">&#169;Pankaj Bhattarai</p>
+      </div>
+    </footer>
     <!-- JavaScript Bundle with Popper
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
