--- a/index.html
+++ b/index.html
@@ -71,24 +71,21 @@
               </a>
             </li>
             <li class="nav__item">
-              <a href="#home" class="nav__link">
-                <i class="uil uil-envelope-heart"></i>Contact Me
+              <a href="#contact" class="nav__link">
+                <i class="uil uil-envelope-heart nav__icon"></i>Contact Me
               </a>
             </li>
           </ul>
           <i class="uil uil-times nav__close" id="nav-close"></i>
         </div>
-        <div class="nav__btns">
-          <!-- Theme changing options  -->
-          <i
-            data-mode="dark"
-            id="theme-button"
-            class="uil uil-cloud-moon moon-change-theme"
-          ></i>
-          <div class="nav__toggle" id="nav-toggle">
-            <i class="uil uil-bars"></i>
-          </div>
-        </div>
+         <div class="nav__btns">
+                <!-- THEME CHANGING BUTTONS -->
+                <i data-mode= "dark" class="uil uil-cloud-moon change-theme " id="theme-button"></i>
+
+                <div class="nav__toggle" id="nav-toggle">
+                    <i class="uil uil-apps"></i>
+                </div>
+            </div>
       </nav>
     </header>
     <!-- =====================MAIN================================= -->
@@ -168,7 +165,8 @@
             <img src="/assets/photo.jpg" alt="main image" class="about__image">
             <div class="about__data">
               <p class="about__description" id="home-about">
-                I am just a learner and a student. Studying B.Tech-CSE w/s Cyber Security. I like the Internet, Space and Philosophy.
+                I am just a learner and a student. Studying B.Tech-CSE w/s Cyber Security. I like the Internet, Space and Philosophy. I am also co-founder at <a href="https://www.youtube.com/c/Leptons69" target="_blank" class="paragragh__links"><i class="uil uil-youtube"></i> Leptons</a>.
+                I have also authored some posts at <a href="https://serverdownapb.wordpress.com/by-pankaj-bhattari-pankajbhattarai50gmail-com/" class="paragragh__links">Server Down</a>.
               </p>
             </div>
             <div class="about__buttons">
@@ -320,20 +318,20 @@
 
                        <!-- Timeline item end -->
                        <div class="row">
-                          <!-- Timeline design -->
-                          <div class="col-auto text-center flex-column d-sm-flex">
-                              <div class="row h-50 qualification__journey">
-                                  <div class="col">
-                                      <span class="qualification__start">
-                                          <i class="uil uil-rocket qualification__start-icon"></i>
-                                      </span>
-                                  </div>
-                                  <div class="col">&nbsp;</div>
-                              </div>
-                          </div>
-                          <!-- Timeline content Events -->
-                          <div class="col py-2"></div>
-                      </div>
+                        <!-- Timeline design -->
+                        <div class="col-auto text-center flex-column d-sm-flex">
+                            <div class="row h-50 qualification__journey">
+                                <div class="col">
+                                    <span class="qualification__start">
+                                        <i class="uil uil-rocket qualification__start-icon"></i>
+                                    </span>
+                                </div>
+                                <div class="col">&nbsp;</div>
+                            </div>
+                        </div>
+                        <!-- Timeline content Events -->
+                        <div class="col py-2"></div>
+                    </div>
                   </div>
               </div>
           </div>
@@ -390,7 +388,7 @@
                   </div>
                   <div class="col-12">
                     <button type="submit" class="button button--flex send-message form-button">
-                      Send Message<i class="uil uil-message button__icon"></i>
+                      Pls don't click. This form doesn't work. Yet to learn backend<i class="uil uil-message button__icon"></i>
                     </button>
                   </div>
                 </div>
@@ -402,70 +400,74 @@
     <!-- footer -->
     <footer class="footer">
       <div class="footer__bg">
-        <div class="footer__container container">
-          <div>
-            <h1 class="footer__title">
-              Pankaj Bhattarai
-            </h1>
-            <span class="footer__subtitle">
-              Computer Engineer soon
-            </span>
+          <div class="footer__container container grid">
 
+              <div>
+                  <h1 class="footer__title"> Pankaj Bhattarai </h1>
+                  <span class="footer__subtitle"> Computer Engineer Soon...</span>
+              </div>
+
+              <ul class="footer__links">
+                  <li>
+                      <a href="#about" class="footer__link"> About Me</a>
+                  </li>
+
+                  <li>
+                      <a href="#contact" class="footer__link"> Contact Me</a>
+                  </li>
+              </ul>
+
+              <div class="footer__socials">
+                <a
+                href="https://www.linkedin.com/in/pankajbhattarai/"
+                target="_blank"
+                class="footer__social"
+                id=""
+              >
+                <i class="uil uil-linkedin"></i>
+              </a>
+              <a
+                href="https://www.instagram.com/im.endangered/"
+                target="_blank"
+                class="footer__social"
+                id=""
+              >
+                <i class="uil uil-instagram"></i>
+              </a>
+              <a
+                href="https://www.facebook.com/im.endangered/"
+                target="_blank"
+                class="footer__social"
+                id=""
+              >
+                <i class="uil uil-facebook"></i>
+              </a>
+              <a
+                href="https://github.com/im-endangered/"
+                target="_blank"
+                class="footer__social"
+                id=""
+              >
+                <i class="uil uil-github"></i>
+              </a>
+              <a
+                href="https://twitter.com/pankaj69420"
+                target="_blank"
+                class="footer__social"
+                id=""
+              >
+                <i class="uil uil-twitter"></i>
+              </a>
+              </div>
           </div>
-          <ul class="footer__links">
-            <li>
-              <a href="#about" class="footer__link">About Me</a>
-            </li>
-            <li>
-              <a href="#contact" class="footer__link">Contact Me</a>
-            </li>
-          </ul>
-          <div class="footer__socials">
-            <a
-            href="https://www.linkedin.com/in/pankajbhattarai/"
-            target="_blank"
-            class="footer__social"
-            id="myLinkedIn"
-          >
-            <i class="uil uil-linkedin"></i>
-          </a>
-          <a
-            href="https://www.instagram.com/im.endangered/"
-            target="_blank"
-            class="footer__social"
-            id="myInstagram"
-          >
-            <i class="uil uil-instagram"></i>
-          </a>
-          <a
-            href="https://www.facebook.com/im.endangered/"
-            target="_blank"
-            class="footer__social"
-            id="myFacebook"
-          >
-            <i class="uil uil-facebook"></i>
-          </a>
-          <a
-            href="https://github.com/im-endangered/"
-            target="_blank"
-            class="footer__social"
-            id="myGithub"
-          >
-            <i class="uil uil-github"></i>
-          </a>
-          <a
-            href="https://twitter.com/pankaj69420"
-            target="_blank"
-            class="footer__social"
-            id="myTwitter"
-          >
-            <i class="uil uil-twitter"></i>
-          </a>
-          </div>
-        </div>
-        <p class="footer__copy">&#169;Pankaj Bhattarai</p>
+
+          <p class="footer__copy">&#169; Pankaj Bhattarai</p>
       </div>
-    </footer>
+  </footer>
+
+    <a href="#home" class="scrollup" id="scroll-up">
+      <i class="uil uil-arrow-up scrollup__icon"></i>
+    </a>
     <!-- JavaScript Bundle with Popper
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
