--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     />
     <!-- Own css -->
 
-    <link type="text/css" href="/css/style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <title>Pankaj Bhattarai</title>
   </head>
   <body>
@@ -162,15 +162,15 @@
         <h2 class="section__title">About</h2>
         <span class="section__subtitle">Little things about me </span>
         <div class="about__container container grid">
-            <img src="/assets/photo.jpg" alt="main image" class="about__image">
+            <img src="assets/photo.jpg" alt="main image" class="about__image">
             <div class="about__data">
               <p class="about__description" id="home-about">
                 I am just a learner and a student. Studying B.Tech-CSE w/s Cyber Security. I like the Internet, Space and Philosophy. I am also co-founder at <a href="https://www.youtube.com/c/Leptons69" target="_blank" class="paragragh__links"><i class="uil uil-youtube"></i> Leptons</a>.
-                I have also authored some posts at <a href="https://serverdownapb.wordpress.com/by-pankaj-bhattari-pankajbhattarai50gmail-com/" class="paragragh__links">Server Down</a>.
+                I have also authored some posts at <a href="https://serverdownapb.wordpress.com/by-pankaj-bhattari-pankajbhattarai50gmail-com/" class="paragragh__links" target="_blank">Server Down</a>.
               </p>
             </div>
             <div class="about__buttons">
-              <a href="/assets/CV.pdf" download="myCV" target="_blank" class="button button--flex">
+              <a href="assets/CV.pdf" download="myCV" target="_blank" class="button button--flex">
                 Download CV<i class="uil uil-file-download-alt button__icon"></i>
               </a>
             </div>
@@ -475,15 +475,16 @@
       crossorigin="anonymous"
     ></script> -->
     <!-- Core -->
-    <script src="/js/core/jquery.min.js"></script>
-    <script src="/js/core/popper.min.js"></script>
-    <script src="/js/core/bootstrap.min.js"></script>
+    <script src="js/core/jquery.min.js"></script>
+    <script src="js/core/popper.min.js"></script>
+    <script src="js/core/bootstrap.min.js"></script>
 
     <!-- Argon JS -->
-    <script src="/js/argon-design-system.js"></script>
+    <script src="js/argon-design-system.js"></script>
     <!-- typewriter -->
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <!-- self script -->
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
+    
   </body>
 </html>
