--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <img src="assets/photo.jpg" alt="main image" class="about__image">
             <div class="about__data">
               <p class="about__description" id="home-about">
-                A tech enthusiast finding his way through the world of research and applying them to create real life solutions. I am also co-founder at <a href="https://www.kalpabriksha.org" target="_blank" class="paragragh__links"><i class="uil uil-youtube"></i> Kalpabriksha </a>.
+                A tech enthusiast finding his way through the world of research and applying them to create real life solutions. I am also co-founder at <a href="https://www.kalpabriksha.org" target="_blank" class="paragragh__links"></i> Kalpabriksha </a>.
                 I have also authored some posts at <a href="https://serverdownapb.wordpress.com/by-pankaj-bhattari-pankajbhattarai50gmail-com/" class="paragragh__links" target="_blank">Server Down</a>.
               </p>
             </div>
