more minor changes

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                   </div>
                   <div class="col-12">
                     <button type="submit" class="button button--flex send-message form-button">
-                      Pls don't click. This form doesn't work. Yet to learn backend<i class="uil uil-message button__icon"></i>
+                      Submit<i class="uil uil-message button__icon"></i>
                     </button>
                   </div>
                 </div>
