few changes and updates

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
               <i class="uil uil-map-pin contact__icon"></i>
               <div class="contact__title">
                 <h3>Address</h3>
-                <span class="contact__subtitle" id="typewriter2"></span>
+                <span class="contact__subtitle" id="">Suryabinayak 04 Bhaktapur</span>
               </div>
 
             </div>
@@ -405,7 +405,7 @@
 
               <div>
                   <h1 class="footer__title"> Pankaj Bhattarai </h1>
-                  <span class="footer__subtitle"> Computer Engineer Soon...</span>
+                  <span class="footer__subtitle"> Computer Engineer</span>
               </div>
 
               <ul class="footer__links">
