--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
               </a>
             </li>
             <li class="nav__item">
+              <a href="https://literature.pankajbhattarai.com.np/" class="nav__link">
+                <i class="uil uil-user-circle nav__icon"></i>Literature
+              </a>
+            </li>
+            <li class="nav__item">
               <a href="#qualifications" class="nav__link">
                 <i class="uil uil-desktop nav__icon"></i>Qualifications
               </a>
@@ -173,6 +178,12 @@
             <div class="about__buttons">
               <a href="assets/CV.pdf" download="myCV" target="_blank" class="button button--flex">
                 Download CV<i class="uil uil-file-download-alt button__icon"></i>
+              </a>
+            </div>
+            <br>
+            <div class="about__buttons">
+              <a href="https://literature.pankajbhattarai.com.np/" target="_blank" class="button button--flex">
+                Literatures<i class="uil uil-book button__icon"></i>
               </a>
             </div>
         </div>
