--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </li>
             <li class="nav__item">
               <a href="https://literature.pankajbhattarai.com.np/" class="nav__link">
-                <i class="uil uil-user-circle nav__icon"></i>Literature
+                <i class="uil uil-book nav__icon"></i>Literature
               </a>
             </li>
             <li class="nav__item">
