fixed an issue that was causing literature page to open in new tab

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </div>
             <br>
             <div class="about__buttons">
-              <a href="https://literature.pankajbhattarai.com.np/" target="_blank" class="button button--flex">
+              <a href="https://literature.pankajbhattarai.com.np/"  class="button button--flex">
                 Literatures<i class="uil uil-book button__icon"></i>
               </a>
             </div>
